add controller